Caught up with Splunk

--- a/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
+++ b/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
@@ -168,6 +168,131 @@ So what do we need to do to validate the scanning attempt? Simple, dig further i
 
 **Search Query Explanation**: This query will show the logs from the suricata log source that are detected/generated from the source IP 40.80.248.42
 
+![Desktop View](/assets/img/Splunk_IH/13.png){: width="700" height="400" }
 
+![Desktop View](/assets/img/Splunk_IH/14.png){: width="700" height="400" }
 
 We have narrowed our search on the src IP and looked at the source type suricata to see what Suricata triggered alerts. In the right panel, we could not find the field of our interest, so we clicked on more fields and searched for the fields that contained the signature alerts information, which is an important point to note.
+
+### Challenge
+
+#### One Suricata alert highlighted the CVE value associated with the attack attempt. What is the CVE value?
+
+![Desktop View](/assets/img/Splunk_IH/15.png){: width="700" height="400" }
+
+#### What is the CMS our web server is using?
+
+![Desktop View](/assets/img/Splunk_IH/16.png){: width="700" height="400" }
+
+#### What is the web scanner the attacker used to perform the scanning attempts?
+
+![Desktop View](/assets/img/Splunk_IH/17.png){: width="700" height="400" }
+
+#### What is the IP address of the server imreallynotbatman.com?
+
+![Desktop View](/assets/img/Splunk_IH/18.png){: width="700" height="400" }
+
+---
+
+## Exploitation Phase
+
+The attacker needs to exploit the vulnerability to gain access to the system/server.
+
+In this task, we will look at the potential exploitation attempt from the attacker against our web server and see if the attacker got successful in exploiting or not.
+
+To begin our investigation, let's note the information we have so far:
+
+- We found two IP addresses from the reconnaissance phase with sending requests to our server.
+- One of the IPs `40.80.148.42` was seen attempting to scan the server with IP 192.168.250.70.
+- The attacker was using the web scanner Acunetix for the scanning attempt.
+
+### Count
+
+Let's use the following search query to see the number of counts by each source IP against the webserver.
+
+**Search Query**:`index=botsv1 imreallynotbatman.com sourcetype=stream* | stats count(src_ip) as Requests by src_ip | sort - Requests`
+
+**Query Explanation**: This query uses the stats function to display the count of the IP addresses in the field src_ip.
+
+![Desktop View](/assets/img/Splunk_IH/20.png){: width="700" height="400" }
+
+Additionally, we can also create different visualization to show the result. Click on Visualization → Select Visualization as shown below.
+
+![Desktop View](/assets/img/Splunk_IH/21.png){: width="700" height="400" }
+
+Now we will narrow down the result to show requests sent to our web server, which has the IP `192.168.250.70`
+
+**Search Query**: `index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70"`
+
+**Query Explanation**: This query will look for all the inbound traffic towards IP **192.168.250.70**.
+
+![Desktop View](/assets/img/Splunk_IH/22.png){: width="700" height="400" }
+
+The result in the **src_ip** field shows three IP addresses (1 local IP and two remote IPs) that originated the HTTP traffic towards our webserver.
+
+Another interesting field, **http_method** will give us information about the HTTP Methods observed during these HTTP communications.
+
+We observed most of the requests coming to our server through the POST request, as shown below.
+
+![Desktop View](/assets/img/Splunk_IH/23.png){: width="700" height="400" }
+
+To see what kind of traffic is coming through the POST requests, we will narrow down on the field `http_method=POST` as shown below:
+
+**Search Query**: `index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70" http_method=POST`
+
+![Desktop View](/assets/img/Splunk_IH/24.png){: width="700" height="400" }
+
+The result in the **src_ip field** shows two IP addresses sending all the POST requests to our server.
+
+Interesting fields: In the left panel, we can find some interesting fields containing valuable information. Some of the fields are:
+
+- src_ip
+- form_data
+- http_user_agent
+- uri
+
+
+The term Joomla is associated with the webserver found in a couple of fields like **uri, uri_path, http_referrer**, etc. This means our webserver is using Joomla CMS (Content Management Service) in the backend.
+
+A little search on the internet for the admin login page of the Joomla CMS will show as -> `/joomla/administrator/index.php`
+
+It is important because this uri contains the login page to access the web portal therefore we will be examining the traffic coming into this admin panel for a potential brute-force attack.
+
+![Desktop View](/assets/img/Splunk_IH/25.png){: width="700" height="400" }
+
+Reference: https://www.joomla.org/administrator/index.php
+
+We can narrow down our search to see the requests sent to the login portal using this information.
+
+**Search query**: `index=botsv1 imreallynotbatman.com sourcetype=stream:http dest_ip="192.168.250.70"  uri="/joomla/administrator/index.php"`
+
+
+**Query Explanation**: We are going to add `uri="/joomla/administrator/index.php"` in the search query to show the traffic coming into this URI.
+
+![Desktop View](/assets/img/Splunk_IH/26.png){: width="700" height="400" }
+
+**form_data** The field contains the requests sent through the form on the admin panel page, which has a login page. We suspect the attacker may have tried multiple credentials in an attempt to gain access to the admin panel. To confirm, we will dig deep into the values contained within the form_data field, as shown below:
+
+**Search Query**: `index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70" http_method=POST uri="/joomla/administrator/index.php" | table _time uri src_ip dest_ip form_data`
+
+**Query Explanation**: We will add this -> `| table _time uri src_ip dest_ip form_data` to create a table containing important fields as shown below:
+
+![Desktop View](/assets/img/Splunk_IH/27.png){: width="700" height="400" }
+
+If we keep looking at the results, we will find two interesting fields `username` that includes the single username `admin` in all the events and another field `passwd` that contains multiple passwords in it, which shows the attacker from the IP `23.22.63.114` Was trying to guess the password by brute-forcing and attempting numerous passwords.
+
+The time elapsed between multiple events also suggests that the attacker was using an automated tool as various attempts were observed in a short time.
+
+### Extracting Username and Passwd Fields using Regex
+
+Looking into the logs, we see that these fields are not parsed properly. Let us use Regex in the search to extract only these two fields and their values from the logs and display them.
+
+We can display only the logs that contain the username and passwd values in the form_data field by adding `form_data=*username*passwd*` in the above search.
+
+**Search Query**: `index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70" http_method=POST uri="/joomla/administrator/index.php" form_data=*username*passwd* | table _time uri src_ip dest_ip form_data`
+
+![Desktop View](/assets/img/Splunk_IH/28.png){: width="700" height="400" }
+
+It's time to use Regex (regular expressions) to extract all the password values found against the field passwd in the logs. To do so, Splunk has a function called rex. If we type it in the search head, it will show detail and an example of how to use it to extract the values.
+
+![Desktop View](/assets/img/Splunk_IH/29.png){: width="700" height="400" }
