Finished more of Splunk 201

--- a/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
+++ b/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
@@ -296,3 +296,116 @@ We can display only the logs that contain the username and passwd values in the 
 It's time to use Regex (regular expressions) to extract all the password values found against the field passwd in the logs. To do so, Splunk has a function called rex. If we type it in the search head, it will show detail and an example of how to use it to extract the values.
 
 ![Desktop View](/assets/img/Splunk_IH/29.png){: width="700" height="400" }
+
+Now, let's use Regex.  `rex field=form_data "passwd=(?<creds>\w+)"` To extract the passwd values only. This will pick the form_data field and extract all the values found with the field. creds.
+
+
+**Search Query**:`index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70" http_method=POST form_data=*username*passwd* | rex field=form_data "passwd=(?<creds>\w+)"  | table src_ip creds`
+
+![Desktop View](/assets/img/Splunk_IH/30.png){: width="700" height="400" }
+
+We have extracted the passwords being used against the username admin on the admin panel of the webserver. If we examine the fields in the logs, we will find two values against the field `http_user_agent `as shown below:
+
+![Desktop View](/assets/img/Splunk_IH/31.png){: width="700" height="400" }
+
+The first value clearly shows attacker used a python script to automate the brute force attack against our server. But one request came from a Mozilla browser. WHY? To find the answer to this query, let's slightly change to the about search query and add `http_user_agent` a field in the search head.
+
+Let's create a table to display key fields and values by appending -> `| table _time src_ip uri http_user_agent creds` in the search query as shown below.
+
+**Search Query**: `index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70" http_method=POST form_data=*username*passwd* | rex field=form_data "passwd=(?<creds>\w+)" |table _time src_ip uri http_user_agent creds`
+
+![Desktop View](/assets/img/Splunk_IH/32.png){: width="700" height="400" }
+
+This result clearly shows a continuous brute-force attack attempt from an IP **23.22.63.114** and 1 password attempt batman from IP **40.80.148.42** using the Mozilla browser.
+
+### Challenge
+
+#### What was the URI which got multiple brute force attempts?
+
+![Desktop View](/assets/img/Splunk_IH/33.png){: width="700" height="400" }
+
+---
+
+#### Against which username was the brute force attempt made?
+
+`admin`
+
+---
+
+#### What was the correct password for admin access to the content management system running imreallynotbatman.com?
+
+`batman`
+
+---
+
+#### How many unique passwords were attempted in the brute force attempt?
+
+`412`
+
+---
+
+#### What IP address is likely attempting a brute force password attack against imreallynotbatman.com?
+
+`23.22.63.114`
+
+---
+
+#### After finding the correct password, which IP did the attacker use to log in to the admin panel?
+
+`40.80.148.42`
+
+---
+
+## Installation Phase
+
+Once the attacker has successfully exploited the security of a system, he will try to install a backdoor or an application for persistence or to gain more control of the system. This activity comes under the installation phase.
+
+In the previous Exploitation phase, we found evidence of the webserver iamreallynotbatman.com getting compromised via brute-force attack by the attacker using the python script to automate getting the correct password. The attacker used the IP" for the attack and the IP to log in to the server. This phase will investigate any payload / malicious program uploaded to the server from any attacker's IPs and installed into the compromised server.
+
+To begin an investigation, we first would narrow down any http traffic coming into our server 192.168.250.70 containing the term ".exe." This query may not lead to the findings, but it's good to start from 1 extension and move ahead.
+
+**Search Query**: `index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70" *.exe`
+
+![Desktop View](/assets/img/Splunk_IH/34.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Splunk_IH/35.png){: width="700" height="400" }
+
+With the search query in place, we are looking for the fields that could have some values of our interest. As we could not find the file name field, we looked at the missing fields and saw a field. `part_filename{}`.
+
+Observing the interesting fields and values, we can see the field `part_filename{}` contains the two file names. an executable file `3791.exe` and a PHP file `agent.php`
+
+Next, we need to find if any of these files came from the IP addresses that were found to be associated with the attack earlier.
+
+Click on the file name; it will be added to the search query, then look for the field c_ip, which seems to represent the client IP.
+
+**Search Query**:`index=botsv1 sourcetype=stream:http dest_ip="192.168.250.70" "part_filename{}"="3791.exe"`
+
+![Desktop View](/assets/img/Splunk_IH/36.png){: width="700" height="400" }
+
+### Was this file executed on the server after being uploaded
+
+We have found that file `3791.exe` was uploaded on the server. The question that may come to our mind would be, was this file executed on the server? We need to narrow down our search query to show the logs from the host-centric log sources to answer this question.
+
+**Search Query**: `index=botsv1 "3791.exe"`
+
+![Desktop View](/assets/img/Splunk_IH/37.png){: width="700" height="400" }
+
+Following the **host-centric log sources**, traces of the executable `3791.exe` were found in:
+
+- `Sysmon`
+- `WinEventlog`
+- `fortigate_utm`
+
+For evidence of execution, we can leverage **Sysmon** and look at:
+
+- `EventCode=1` → Program execution
+
+📚 **Reference:**  
+[Sysmon Documentation – Microsoft Docs](https://docs.microsoft.com/en-us/sysinternals/downloads/sysmon)
+
+**Search Query**: `index=botsv1 "3791.exe" sourcetype="XmlWinEventLog" EventCode=1`
+
+**Query Explanation**: This query will look for the process Creation logs containing the term "**3791.exe**" in the logs.
+
+![Desktop View](/assets/img/Splunk_IH/38.png){: width="700" height="400" }
+
