Finished Task 7 of Splunk 201

--- a/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
+++ b/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
@@ -409,3 +409,71 @@ For evidence of execution, we can leverage **Sysmon** and look at:
 
 ![Desktop View](/assets/img/Splunk_IH/38.png){: width="700" height="400" }
 
+Looking at the output, we can clearly say that this file was executed on the compromised server. We can also look at other host-centric log sources to confirm the result.
+
+---
+
+### Challenge
+
+#### Sysmon also collects the Hash value of the processes being created. What is the MD5 HASH of the program 3791.exe?
+
+![Desktop View](/assets/img/Splunk_IH/39.png){: width="700" height="400" }
+
+---
+
+### Looking at the logs, which user executed the program 3791.exe on the server?
+
+![Desktop View](/assets/img/Splunk_IH/40.png){: width="700" height="400" }
+
+---
+
+#### Search hash on the virustotal. What other name is associated with this file 3791.exe?
+
+![Desktop View](/assets/img/Splunk_IH/41.png){: width="700" height="400" }
+
+---
+
+## Action on Objective
+
+As the website was defaced due to a successful attack by the adversary, it would be helpful to understand better what ended up on the website that caused defacement.
+
+As an analyst, our first quest could be to figure out the traffic flow that could lead us to the answer to this question. There can be a different approach to finding the answer to this question. We will start our investigation by examining the Suricata log source and the IP addresses communicating with the webserver 192.168.250.70.
+
+**Search Query**:`index=botsv1 dest=192.168.250.70 sourcetype=suricata`
+
+![Desktop View](/assets/img/Splunk_IH/42.png){: width="700" height="400" }
+
+The logs do not show any external IP communicating with the server. Let us change the flow direction to see if any communication originates from the server.
+
+**Search Query**: `index=botsv1 src=192.168.250.70 sourcetype=suricata`
+
+![Desktop View](/assets/img/Splunk_IH/43.png){: width="700" height="400" }
+
+What is interesting about the output? Usually, the web servers do not originate the traffic. The browser or the client would be the source, and the server would be the destination. Here we see three external IPs towards which our web server initiates the outbound traffic. There is a large chunk of traffic going to these external IP addresses, which could be worth checking.
+
+Pivot into the destination IPs one by one to see what kind of traffic/communication is being carried out.
+
+**Search Query**: `index=botsv1 src=192.168.250.70 sourcetype=suricata dest_ip=23.22.63.114`
+
+The URL field shows 2 PHP files and one jpeg file. This jpeg file looks interesting. Let us change the search query and see where this jpeg file came from.
+
+**Search Query**: `index=botsv1 url="/poisonivy-is-coming-for-you-batman.jpeg" dest_ip="192.168.250.70" | table _time src dest_ip http.hostname url`
+
+![Desktop View](/assets/img/Splunk_IH/45.png){: width="700" height="400" }
+
+The end result clearly shows a suspicious jpeg `poisonivy-is-coming-for-you-batman.jpeg` was downloaded from the attacker's host `prankglassinebracket.jumpingcrab.com` that defaced the site.
+
+---
+
+### Challenge
+
+#### What is the name of the file that defaced the imreallynotbatman.com website?
+
+`poisonivy-is-coming-for-you-batman.jpeg`
+
+---
+
+#### Fortigate Firewall 'fortigate_utm' detected SQL attempt from the attacker's IP 40.80.148.42. What is the name of the rule that was triggered during the SQL Injection attempt?
+
+![Desktop View](/assets/img/Splunk_IH/46.png){: width="700" height="400" }
+
