--- a/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
+++ b/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
@@ -477,3 +477,161 @@ The end result clearly shows a suspicious jpeg `poisonivy-is-coming-for-you-batm
 
 ![Desktop View](/assets/img/Splunk_IH/46.png){: width="700" height="400" }
 
+---
+
+## Command and Control
+
+The attacker uploaded the file to the server before defacing it. While doing so, the attacker used a Dynamic DNS to resolve a malicious IP. Our objective would be to find the IP that the attacker decided the DNS.
+
+To investigate the communication to and from the adversary's IP addresses, we will be examining the network-centric log sources mentioned above. We will first pick `fortigate_utm` to review the firewall logs and then move on to the other log sources.
+
+**Search Query**: `index=botsv1 sourcetype=fortigate_utm"poisonivy-is-coming-for-you-batman.jpeg"`
+
+![Desktop View](/assets/img/Splunk_IH/47.png){: width="700" height="400" }
+
+Looking into the Fortinet firewall logs, we can see the src IP, destination IP, and URL. Look at the fields on the left panel and the field `url` contains the FQDN (Fully Qualified Domain Name).
+
+![Desktop View](/assets/img/Splunk_IH/48.png){: width="700" height="400" }
+
+Though we have found the answer, we can verify other log sources.
+
+Let us verify the answer by looking at another log source.`stream:http`.
+**Search Query**: `index=botsv1 sourcetype=stream:http dest_ip=23.22.63.114 "poisonivy-is-coming-for-you-batman.jpeg" src_ip=192.168.250.70`
+
+![Desktop View](/assets/img/Splunk_IH/49.png){: width="700" height="400" }
+
+We have identified the suspicious domain as a Command and Control Server, which the attacker contacted after gaining control of the server.
+
+Note: We can also confirm the domain by looking at the last log source `stream:dns` to see what DNS queries were sent from the webserver during the infection period.
+
+### Challenge
+
+#### This attack used dynamic DNS to resolve to the malicious IP. What fully qualified domain name (FQDN) is associated with this attack?
+
+`prankglassinebracket.jumpingcrab.com`
+
+---
+
+## Weaponization
+
+In the weaponization phase, the adversaries would:
+
+- Create Malware / Malicious document to gain initial access / evade detection etc.
+- Establish domains similar to the target domain to trick users.
+- Create a Command and Control Server for the post-exploitation communication/activity etc.
+
+We have found some domains / IP addresses associated with the attacker during the investigations. This task will mainly look into OSINT sites to see what more information we can get about the adversary.
+
+
+So far, we have found a domain `prankglassinebracket.jumpingcrab.com` associated with this attack. Our first task would be to find the IP address tied to the domains that may potentially be pre-staged to attack Wayne Enterprise.
+
+In the following exercise, we will be searching the online Threat Intel sites for any information like IP addresses/domains / Email addresses associated with this domain which could help us know more about this adversary.
+
+#### Robtex:
+
+[Robtex](https://www.robtex.com/) is a Threat Intel site that provides information about IP addresses, domain names, etc.
+
+Please search for the domain on the robtex site and see what we get. We will get the IP addresses associated with this domain.
+
+![Desktop View](/assets/img/Splunk_IH/50.png){: width="700" height="400" }
+
+Some domains/subdomains associated with this domain:
+
+![Desktop View](/assets/img/Splunk_IH/51.png){: width="700" height="400" }
+
+Reference: https://www.robtex.com/dns-lookup/prankglassinebracket.jumpingcrab.com
+
+Next, search for the IP address 23.22.63.114   on this Threat Intel site.
+
+![Desktop View](/assets/img/Splunk_IH/52.png){: width="700" height="400" }
+
+
+What did we find? this IP is associated with some domains that look pretty similar to the WAYNE Enterprise site.
+
+Reference: https://www.robtex.com/ip-lookup/23.22.63.114
+
+![Desktop View](/assets/img/Splunk_IH/53.png){: width="700" height="400" }
+
+
+#### Virustotal
+
+[Virustotal](https://www.virustotal.com/) is an OSINT site used to analyze suspicious files, domains, IP, etc. Let's now search for the IP address on the virustotal site. If we go to the RELATIONS tab, we can see all the domains associated with this IP which look similar to the Wayn Enterprise company.
+
+![Desktop View](/assets/img/Splunk_IH/54.png){: width="700" height="400" }
+
+In the domain list, we saw the domain that is associated with the attacker www.po1s0n1vy.com . Let us search for this domain on the virustotal.
+
+We can also look for the whois information on this site -> whois.domaintools.com to see if we can find something valuable.
+
+### Challenge
+
+#### What IP address has P01s0n1vy tied to domains that are pre-staged to attack Wayne Enterprises?
+
+`23.22.63.114`
+
+---
+
+#### Based on the data gathered from this attack and common open-source intelligence sources for domain names, what is the email address that is most likely associated with the P01s0n1vy APT group?
+
+![Desktop View](/assets/img/Splunk_IH/56.png){: width="700" height="400" }
+
+---
+
+## Delivery Phase
+
+DeliveryImage representing Delivery phase 
+
+Attackers create malware and infect devices to gain initial access or evade defenses and find ways to deliver it through different means. We have identified various IP addresses, domains and Email addresses associated with this adversary. Our task for this lesson would be to use the information we have about the adversary and use various Threat Hunting platforms and OSINT sites to find any malware linked with the adversary.
+
+Threat Intel report suggested that this adversary group Poison lvy appears to have a secondary attack vector in case the initial compromise fails. Our objective would be to understand more about the attacker and their methodology and correlate the information found in the logs with various threat Intel sources.
+
+### OSINT sites
+
+- Virustotal
+- ThreatMiner
+- Hybrid-Analysis
+- ThreatMiner
+
+Let's start our investigation by looking for the IP `23.22.63.114` on the Threat Intel site [ThreatMiner](https://www.threatminer.org/host.php?q=23.22.63.114#gsc.tab=0&gsc.q=23.22.63.114&gsc.page=1).
+
+
+
+We found three files associated with this IP, from which one file with the hash value  `c99131e0169171935c5ac32615ed6261` seems to be malicious and something of interest.
+
+Now, click on this MD5 hash value to see the metadata and other important information about this particular file.
+
+
+
+Reference: https://www.threatminer.org/host.php?q=23.22.63.114#gsc.tab=0&gsc.q=23.22.63.114&gsc.page=1
+
+### Virustotal
+
+[Open virustotal.com](http://virustotal.com/) and search for the hash on the virustotal now. Here, we can get information about the metadata about this Malware in the Details tab.
+
+
+
+
+
+Reference: https://www.virustotal.com/gui/file/9709473ab351387aab9e816eff3910b9f28a7a70202e250ed46dba8f820f34a8/community
+
+### Hybrid-Analysis
+
+Hybrid Analysis is a beneficial site that shows the behavior Analysis of any malware. Here you can look at all the activities performed by this Malware after being executed. Some of the information that Hybrid-Analysis provides are:
+
+- Network Communication.
+- DNS Requests
+- Contacted Hosts with Country Mapping
+- Strings
+- MITRE ATT&CK Mapping
+- Malicious Indicators.
+- DLLs Imports / Exports
+- Mutex Information if created
+- File Metadata
+- Screenshots
+
+
+Scroll down, and you will get a lot of information about this Malware.
+
+
+
+Reference: https://www.hybrid-analysis.com/sample/9709473ab351387aab9e816eff3910b9f28a7a70202e250ed46dba8f820f34a8?environmentId=100
