Finished Incident Handling with Splunk and Benign

--- a/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
+++ b/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Incident Handling with Splunk"
 date: 2025-07-07 15:30:00 -0700
-categories: [TryHackMe, Blue Team, SIEM]
+categories: [SOC, Blue Team, SIEM]
 tags: [THM, Splunk, SIEM, Incident Handling, Detection, Blue Team]
 description: Learn to use Splunk for incident handling through interactive scenarios. Practice detecting and responding to real-world threats using Splunk’s search and analysis capabilities.
 ---
@@ -590,17 +590,18 @@ Threat Intel report suggested that this adversary group Poison lvy appears to ha
 - Virustotal
 - ThreatMiner
 - Hybrid-Analysis
-- ThreatMiner
+
+### ThreatMiner
 
 Let's start our investigation by looking for the IP `23.22.63.114` on the Threat Intel site [ThreatMiner](https://www.threatminer.org/host.php?q=23.22.63.114#gsc.tab=0&gsc.q=23.22.63.114&gsc.page=1).
 
-
+![Desktop View](/assets/img/Splunk_IH/57.png){: width="700" height="400" }
 
 We found three files associated with this IP, from which one file with the hash value  `c99131e0169171935c5ac32615ed6261` seems to be malicious and something of interest.
 
 Now, click on this MD5 hash value to see the metadata and other important information about this particular file.
 
-
+![Desktop View](/assets/img/Splunk_IH/58.png){: width="700" height="400" }
 
 Reference: https://www.threatminer.org/host.php?q=23.22.63.114#gsc.tab=0&gsc.q=23.22.63.114&gsc.page=1
 
@@ -608,9 +609,9 @@ Reference: https://www.threatminer.org/host.php?q=23.22.63.114#gsc.tab=0&gsc.q=2
 
 [Open virustotal.com](http://virustotal.com/) and search for the hash on the virustotal now. Here, we can get information about the metadata about this Malware in the Details tab.
 
+![Desktop View](/assets/img/Splunk_IH/59.png){: width="700" height="400" }
 
-
-
+![Desktop View](/assets/img/Splunk_IH/60.png){: width="700" height="400" }
 
 Reference: https://www.virustotal.com/gui/file/9709473ab351387aab9e816eff3910b9f28a7a70202e250ed46dba8f820f34a8/community
 
@@ -629,9 +630,95 @@ Hybrid Analysis is a beneficial site that shows the behavior Analysis of any mal
 - File Metadata
 - Screenshots
 
+![Desktop View](/assets/img/Splunk_IH/61.png){: width="700" height="400" }
 
 Scroll down, and you will get a lot of information about this Malware.
 
-
+![Desktop View](/assets/img/Splunk_IH/62.png){: width="700" height="400" }
 
 Reference: https://www.hybrid-analysis.com/sample/9709473ab351387aab9e816eff3910b9f28a7a70202e250ed46dba8f820f34a8?environmentId=100
+
+### Challenge
+
+#### What is the HASH of the Malware associated with the APT group?
+
+c99131e0169171935c5ac32615ed6261
+
+#### What is the name of the Malware associated with the Poison Ivy Infrastructure?
+
+MirandaTateScreensaver.scr.exe
+
+## Conclusion
+
+In this fun exercise, as a SOC Analyst, we have investigated a cyber-attack where the attacker had defaced a website 'imreallynotbatman.com' of the Wayne Enterprise. We mapped the attacker's activities into the 7 phases of the Cyber Kill Chain. Let us recap everything we have found so far:
+
+---
+
+### Reconnaissance Phase
+
+We first looked at any reconnaissance activity from the attacker to identify the IP address and other details about the adversary.
+
+**Findings:**
+
+- IP Address `40.80.148.42` was found to be scanning our webserver.
+- The attacker was using **Acunetix** as a web scanner.
+
+---
+
+### Exploitation Phase
+
+We then looked into the traces of exploitation attempts and found brute-force attacks against our server, which were successful.
+
+**Findings:**
+
+- Brute force attack originated from IP `23.22.63.114`.
+- The IP address used to gain access: `40.80.148.42`
+- `142` unique brute force attempts were made against the server, out of which one attempt was successful.
+
+---
+
+### Installation Phase
+
+Next, we looked at the installation phase to see any executable from the attacker's IP Address uploaded to our server.
+
+**Findings:**
+
+- A malicious executable file `3791.exe` was observed to be uploaded by the attacker.
+- We looked at the sysmon logs and found the **MD5 hash** of the file.
+
+---
+
+### Action on Objective
+
+After compromising the web server, the attacker defaced the website.
+
+**Findings:**
+
+- We examined the logs and found the file name used to deface the webserver.
+
+---
+
+### Weaponization Phase
+
+We used various threat Intel platforms to find the attacker's infrastructure based on the following information we saw in the above activities.
+
+**Information we had:**
+
+- **Domain:** `prankglassinebracket.jumpingcrab.com`
+- **IP Address:** `23.22.63.114`
+
+**Findings:**
+
+- Multiple masquerading domains were found associated with the attacker's IPs.
+- An email of the user `Lillian.rose@po1s0n1vy.com` was also found associated with the attacker's IP address.
+
+---
+
+### Deliver Phase
+
+In this phase, we again leveraged online Threat Intel sites to find malware associated with the adversary's IP address, which appeared to be a secondary attack vector if the initial compromise failed.
+
+**Findings:**
+
+- A malware named `MirandaTateScreensaver.scr.exe` was found associated with the adversary.
+- **MD5** of the malware was `c99131e0169171935c5ac32615ed6261`
