--- a/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
+++ b/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
@@ -555,7 +555,7 @@ Reference: https://www.robtex.com/ip-lookup/23.22.63.114
 
 #### Virustotal
 
-[Virustotal](https://www.virustotal.com/) is an OSINT site used to analyze suspicious files, domains, IP, etc. Let's now search for the IP address on the virustotal site. If we go to the RELATIONS tab, we can see all the domains associated with this IP which look similar to the Wayn Enterprise company.
+[Virustotal](https://www.virustotal.com/gui/home/upload) is an OSINT site used to analyze suspicious files, domains, IP, etc. Let's now search for the IP address on the virustotal site. If we go to the RELATIONS tab, we can see all the domains associated with this IP which look similar to the Wayn Enterprise company.
 
 ![Desktop View](/assets/img/Splunk_IH/54.png){: width="700" height="400" }
 
@@ -607,7 +607,7 @@ Reference: https://www.threatminer.org/host.php?q=23.22.63.114#gsc.tab=0&gsc.q=2
 
 ### Virustotal
 
-[Open virustotal.com](http://virustotal.com/) and search for the hash on the virustotal now. Here, we can get information about the metadata about this Malware in the Details tab.
+[Open virustotal.com](https://www.virustotal.com/gui/home/upload) and search for the hash on the virustotal now. Here, we can get information about the metadata about this Malware in the Details tab.
 
 ![Desktop View](/assets/img/Splunk_IH/59.png){: width="700" height="400" }
 
