--- a/_posts/KC7/KQL 101/2025-07-18-KQL101.md
+++ b/_posts/KC7/KQL 101/2025-07-18-KQL101.md
@@ -85,13 +85,62 @@ Table
 
 ![Desktop View](/assets/img/KQL101/3.png){: width="700" height="400" }
 
-
+> **Note**  
+> Email = **nene_leaks@valdoriantimes.news**
+> Name = **Nene Leaks**
+{: .note }
 
 ---
 
 We can learn more about Nene Leaks using information from other tables. Let's take her email address from the Employees table and use it in a query for the Email table.
 
 ### How many emails did Nene Leaks receive?
+
+![Desktop View](/assets/img/KQL101/4.png){: width="700" height="400" }
+
+---
+
+You can use the distinct operator to find unique values in a specific column.
+
+### How many distinct senders were seen in the email logs from the domain name "weprinturstuff.com"?
+
+![Desktop View](/assets/img/KQL101/5.png){: width="700" height="400" }
+
+---
+
+### How many distinct websites did “Lois Lane” visit?
+
+![Desktop View](/assets/img/KQL101/6.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/KQL101/7.png){: width="700" height="400" }
+
+### How many distinct domains in the PassiveDns records contain the word “hire”?
+
+![Desktop View](/assets/img/KQL101/8.png){: width="700" height="400" }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
