Added more to KQL 101

--- a/_posts/KC7/KQL 101/2025-07-18-KQL101.md
+++ b/_posts/KC7/KQL 101/2025-07-18-KQL101.md
@@ -118,29 +118,164 @@ You can use the distinct operator to find unique values in a specific column.
 
 ![Desktop View](/assets/img/KQL101/8.png){: width="700" height="400" }
 
+---
+
+Review the emails sent to Clark Kent for the one sent on January 31, 2024 containing the final edits for the election OpEd.
+
+> **Note**
+> Email = **clark_kent@valdoriantimes.news**
 
 
+### What was the subject line of this email?
 
+![Desktop View](/assets/img/KQL101/9.png){: width="700" height="400" }
 
+---
 
+Who sent this email containing the final edits for the OpEd piece?
 
+### Enter the sender's email address.
 
+`ronnie_mclovin@valdoriantimes.news`
 
+### What was the name of the .docx file that was sent in this email?
 
+`OpEdFinal_to_print.docx`
 
+---
 
+So, it looks like Ronnie did send the email. When you go back and talk to Ronnie, she is adamant that she never sent the draft. She thinks maybe someone else used her account to send it.
 
+She doesn't recall getting any unusual emails or any other weird activity on her computer.
 
+### Do you think this needs further investigation (yes/no)? Choose wisely 😉
 
+`yes`
 
+---
 
+You stop by The Valdorian Times office and meet with some staff. After the meeting, one employee, Sonia Gose, comes up to you and says she may have something that can help with your investigation.
 
+### What is Sonia's job role?
 
+![Desktop View](/assets/img/KQL101/10.png){: width="700" height="400" }
 
+---
 
+Sonia shows you a suspicious email she received a few weeks ago.
 
+### What email address was used to send this email?
 
+`newspaper_jobs@gmail.com`
 
+---
 
+### When was the email sent to Sonia Gose? Enter the exact timestamp from the logs.
 
+![Desktop View](/assets/img/KQL101/11.png){: width="700" height="400" }
 
+---
+
+### Which URL was included in the email?
+
+`https://promotionrecruit.com/published/Valdorian_Times_Editorial_Offer_Letter.docx`
+
+---
+
+You ask Sonia if she clicked on the link but she says she doesn't remember. Let's help her remember. 😐
+
+### What is Sonia Gose's IP address?
+
+`10.10.0.3`
+
+---
+
+Did Sonia click on this link?
+
+### If so, enter the timestamp when she clicked the link. If not, type "no".
+
+![Desktop View](/assets/img/KQL101/12.png){: width="700" height="400" }
+
+`1/5/2024, 10:23:17 AM`
+
+---
+Oh no! It looks like Sonia did click on the link! 😱
+
+### What was the name of the docx file in the link that Sonia clicked?
+
+`Valdorian_Times_Editorial_Offer_Letter.docx`
+
+---
+
+If she clicked on the link, we should assume that file might have been downloaded. Let's see if we can find the file on her machine.
+
+### What is Sonia Gose's hostname?
+
+`UL0M-MACHINE`
+
+---
+
+### When did the downloaded docx file first show up on Sonia's machine?
+
+![Desktop View](/assets/img/KQL101/13.png){: width="700" height="400" }
+
+1/5/2024, 10:24:04 AM
+
+---
+
+### What was the full path of the docx file that was downloaded to Sonia's machine?
+
+`C:\Users\sogose\Downloads\Valdorian_Times_Editorial_Offer_Letter.docx`
+
+---
+
+A hash is a string that uniquely represents the contents of a file. We can get the hash of a file by running it through a hashing algorithm. Lucky for us, the hashes of all downloaded files are already captured.
+
+### What is the sha256 hash of the file that Sonia downloaded?
+
+`60b854332e393a6a2f0015383969c3ac705126a6b7829b762057a3994967a61f`
+
+---
+After the malicious file was downloaded, it began executing malicious content 🪲
+
+Let's continue to look at Sonia's machine.
+
+### What is the name of the file (.ps1) that was written to disk immediately after the docx was downloaded?
+
+`hacktivist_manifesto.ps1`
+
+![Desktop View](/assets/img/KQL101/14.png){: width="700" height="400" }
+
+---
+
+### When was this new file created?
+
+`1/5/2024, 10:24:32 AM`
+
+---
+
+The file extension of this new file, ".ps1" is pretty interesting.
+
+### Let's do some research! What type of file is this?
+
+`PowerShell`
+
+---
+
+You manage to do some forensics and get a copy of the PowerShell script. Here's what it looks like:
+
+![Desktop View](/assets/img/KQL101/15.png){: width="700" height="400" }
+
+### What does the attacker say to "let you know they are here"?
+
+`lol ur bout 2 get pwnd`
+
+---
+
+### According to the PowerShell script, what might be the hacker's favorite color?
+
+`Green`
+
+---
+
+### 
