Checkpoint for KQL 101

--- a/_posts/KC7/KQL 101/2025-07-18-KQL101.md
+++ b/_posts/KC7/KQL 101/2025-07-18-KQL101.md
@@ -278,4 +278,22 @@ You manage to do some forensics and get a copy of the PowerShell script. Here's 
 
 ---
 
-### 
+### The purpose of the script is to invoke ____ and uncover da truth
+
+`Plink`
+
+---
+
+We might be able to find more information about the PowerShell script in ProcessEvents data.
+
+Look for process events related to the PowerShell script. Use the name of the .ps1 file (hacktivist_manifesto.ps1) to find related ProcessEvents.
+
+### How many Process Events are there related to this PowerShell script on Sonia's machine?
+
+![Desktop View](/assets/img/KQL101/16.png){: width="700" height="400" }
+
+---
+
+It looks like one of the processes is using schtasks.exe, which creates scheduled tasks. Scheduled tasks can be used to conduct certain actions at a regular interval.
+
+### What is the full command used to create the scheduled task?
